# JsonComparatorBasedOnSchema

./: CMakeLists.txt  main.cpp  readme.md
PHPLibFiles/: indexs.php  library.php
html/: aclPermissionTests_8cpp.html  aclPermissionTests_8cpp__incl.map  aclPermissionTests_8cpp__incl.md5  aclPermission_8cpp.html  aclPermission_8cpp__incl.map  aclPermission_8cpp__incl.md5  allocators_8h.html  allocators_8h__dep__incl.map  allocators_8h__dep__incl.md5  allocators_8h__incl.map  allocators_8h__incl.md5  allocators_8h_source.html  annotated.html  biginteger_8h.html  biginteger_8h__dep__incl.map  biginteger_8h__dep__incl.md5  biginteger_8h__incl.map  biginteger_8h__incl.md5  biginteger_8h_source.html  calculationOforder_8cpp.html  calculationOforder_8cpp__incl.map  calculationOforder_8cpp__incl.md5  calculationTests_8cpp.html  calculationTests_8cpp__incl.map  calculationTests_8cpp__incl.md5  classAclpermission-members.html  classAclpermission.html  classAutoUTFInputStream-members.html  classAutoUTFInputStream.html  classAutoUTFOutputStream-members.html  classAutoUTFOutputStream.html  classBasicIStreamWrapper-members.html  classBasicIStreamWrapper.html  classCrtAllocator-members.html  classCrtAllocator.html  classEncodedInputStream-members.html  classEncodedInputStream.html  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4-members.html  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4.html  classEncodedOutputStream-members.html  (+519 more)
html/search/: all_10.js  all_11.js  all_12.js  (+106 more)
sharedLib/: aclPermission.cpp  calculationOforder.cpp  library.h  validation.cpp
(+4 files in other folders)
